edit-add-finals

--- a/BIOTECHNOLOGY/lec3 PLANT DEVELOPMENTAL BIOLOGY CORRECTED.htm
+++ b/BIOTECHNOLOGY/lec3 PLANT DEVELOPMENTAL BIOLOGY CORRECTED.htm
@@ -1,116 +1,121 @@
+<html>
+
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta name=Generator content="Microsoft Word 15 (filtered)">
+<style>
+<!--
+ /* Font Definitions */
+ @font-face
+	{font-family:"Cambria Math";
+	panose-1:2 4 5 3 5 4 6 3 2 4;}
+@font-face
+	{font-family:Calibri;
+	panose-1:2 15 5 2 2 2 4 3 2 4;}
+@font-face
+	{font-family:Tahoma;
+	panose-1:2 11 6 4 3 5 4 4 2 4;}
+ /* Style Definitions */
+ p.MsoNormal, li.MsoNormal, div.MsoNormal
+	{margin-top:0in;
+	margin-right:0in;
+	margin-bottom:8.0pt;
+	margin-left:0in;
+	line-height:107%;
+	font-size:11.0pt;
+	font-family:"Calibri",sans-serif;}
+.MsoChpDefault
+	{font-family:"Calibri",sans-serif;}
+@page WordSection1
+	{size:595.35pt 841.95pt;
+	margin:1.0in 1.0in 1.0in 1.0in;}
+div.WordSection1
+	{page:WordSection1;}
+-->
+</style>
+
+</head>
+
+<body lang=EN-US>
+
+<div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b style='mso-bidi-font-weight:normal'><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif'>Plant Developmental
-Biology<o:p></o:p></span></b></p>
+line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>Plant
+Developmental Biology</span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b style='mso-bidi-font-weight:normal'><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif'>Prof. Shri Ram
-Yadav<o:p></o:p></span></b></p>
+line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>Prof.
+Shri Ram Yadav</span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b style='mso-bidi-font-weight:normal'><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif'>Department of
-Biotechnology<o:p></o:p></span></b></p>
+line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>Department
+of Biotechnology</span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b style='mso-bidi-font-weight:normal'><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif'>Indian Institute
-of Technology, Roorkee<o:p></o:p></span></b></p>
+line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>Indian
+Institute of Technology, Roorkee</span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b style='mso-bidi-font-weight:normal'><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif'><br>
-Lecture - 03<o:p></o:p></span></b></p>
+line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'><br>
+Lecture - 03</span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b style='mso-bidi-font-weight:normal'><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif'>Characteristics of
-Plant Growth and Development - II<o:p></o:p></span></b></p>
+line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>Characteristics
+of Plant Growth and Development - II</span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
-line-height:normal'><b style='mso-bidi-font-weight:normal'><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif'><o:p>&nbsp;</o:p></span></b></p>
+line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>&nbsp;</span></b></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Welcome
 to the second lecture of Characteristic of Plant Growth and Development. So, if
 we recall in the first lecture, we had discussed the primary growth and
-development, secondary growth and development and lastly <span class=GramE>the <span
-style='mso-spacerun:yes'>ï¿½</span>lateral</span> growth and development. We had
-also discussed about the axis where <span style='mso-spacerun:yes'>ï¿½</span>the
-growth and development occurs, the points or the region of the plants where the
+development, secondary growth and development and lastly the  lateral growth
+and development. We had also discussed about the axis where  the growth and
+development occurs, the points or the region of the plants where the
 meristematic activities are positioned and how they are maintained and
-coordinated during the process of plant growth and development. <o:p></o:p></span></p>
+coordinated during the process of plant growth and development. </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%;page-break-after:
 avoid'><span style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>(Refer
-Slide Time: 01:05)<o:p></o:p></span></p>
+Slide Time: 01:05)</span></p>
 
 <p class=MsoNormal align=center style='margin-top:12.0pt;margin-right:0in;
 margin-bottom:12.0pt;margin-left:0in;text-align:center;line-height:150%'><span
-style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><!--[if gte vml 1]><v:shapetype
- id="_x0000_t75" coordsize="21600,21600" o:spt="75" o:preferrelative="t"
- path="m@4@5l@4@11@9@11@9@5xe" filled="f" stroked="f">
- <v:stroke joinstyle="miter"/>
- <v:formulas>
-  <v:f eqn="if lineDrawn pixelLineWidth 0"/>
-  <v:f eqn="sum @0 1 0"/>
-  <v:f eqn="sum 0 0 @1"/>
-  <v:f eqn="prod @2 1 2"/>
-  <v:f eqn="prod @3 21600 pixelWidth"/>
-  <v:f eqn="prod @3 21600 pixelHeight"/>
-  <v:f eqn="sum @0 0 1"/>
-  <v:f eqn="prod @6 1 2"/>
-  <v:f eqn="prod @7 21600 pixelWidth"/>
-  <v:f eqn="sum @8 21600 0"/>
-  <v:f eqn="prod @7 21600 pixelHeight"/>
-  <v:f eqn="sum @10 21600 0"/>
- </v:formulas>
- <v:path o:extrusionok="f" gradientshapeok="t" o:connecttype="rect"/>
- <o:lock v:ext="edit" aspectratio="t"/>
-</v:shapetype><v:shape id="_x0000_i1025" type="#_x0000_t75" style='width:4in;
- height:3in'>
- <v:imagedata src="lec3%20PLANT%20DEVELOPMENTAL%20BIOLOGY%20CORRECTED_files/image001.png"
-  o:title="vlcsnap-2019-07-13-10h37m04s393"/>
- <o:lock v:ext="edit" aspectratio="f"/>
-</v:shape><![endif]--><![if !vml]><img width=384 height=288
-src="lec3%20PLANT%20DEVELOPMENTAL%20BIOLOGY%20CORRECTED_files/image002.jpg"
-v:shapes="_x0000_i1025"><![endif]><o:p></o:p></span></p>
+style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><img
+width=384 height=288
+src="lec3%20PLANT%20DEVELOPMENTAL%20BIOLOGY%20CORRECTED_files/image001.jpg"></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Now
 we will continue this lecture of characteristic of plant growth and development
 with another characteristic of plant development which is Plasticity. It is
-extremely important for the plants; <span class=GramE>considering the fact that</span>
-plants are sessile in nature. They cannot move from one place to another place which
-means that they <span class=GramE>have to</span> face all the environmental
-disturbance or all the environmental conditions just by standing at one place. And,
-to cope with this change in the environment, they have adopted a very nice
-mechanism which is a plastic in nature. <o:p></o:p></span></p>
+extremely important for the plants; considering the fact that plants are
+sessile in nature. They cannot move from one place to another place which means
+that they have to face all the environmental disturbance or all the
+environmental conditions just by standing at one place. And, to cope with this
+change in the environment, they have adopted a very nice mechanism which is a plastic
+in nature. </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
-12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span class=GramE><span
-style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Thus</span></span><span
-style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'> the
-plasticity is basically an adaptability to prevailing environmental condition.
+12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
+style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Thus
+the plasticity is basically an adaptability to prevailing environmental condition.
 I will take couple of examples for it and you will appreciate that how
-developmental plasticity is <span class=GramE>adopted</span> or it is acquired
-by the plants. <o:p></o:p></span></p>
+developmental plasticity is adopted or it is acquired by the plants. </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>If
-you take this example, this is couch grass. Basically, <span class=GramE>itï¿½s</span>
-shoot grows below the ground as well as above the ground. And, what happens when
-the shoots are growing underground. Underground means it has a very different
-environmental condition than the above ground. In underground, the light
-intensity is less. Oxygen availability and other factors are very different
-than the above ground.<o:p></o:p></span></p>
+you take this example, this is couch grass. Basically, it’s shoot grows below
+the ground as well as above the ground. And, what happens when the shoots are growing
+underground. Underground means it has a very different environmental condition
+than the above ground. In underground, the light intensity is less. Oxygen
+availability and other factors are very different than the above ground.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -118,16 +123,15 @@ style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Yo
 can see that when the shoot is growing underground, it has a developmental program
 which is giving rise to long internode and leaf like structure which is called
 scale leaf and more importantly every node you can see a lot of adventitious root
-development. <o:p></o:p></span></p>
+development. </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>So,
-there is a developmental growth which is already going on here. <span
-style='mso-spacerun:yes'>ï¿½</span>But once this growing shoot reaches the ground
-and once it is coming outside the ground, it switches its developmental program.
-There is a change. <span style='mso-spacerun:yes'>ï¿½</span>The first thing that happens
-is now it would start making short internode.<o:p></o:p></span></p>
+there is a developmental growth which is already going on here.  But once this
+growing shoot reaches the ground and once it is coming outside the ground, it
+switches its developmental program. There is a change.  The first thing that happens
+is now it would start making short internode.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -135,8 +139,8 @@ style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>So
 the internode length is reduced to do that it has to change. It is the basic
 program of developmental biology. Another thing which happens there, is a
 formation of true leaf blade like structure. This shoot at the node is no
-longer making the roots. So, what are the changes it <span class=GramE>has to</span>
-do developmentally? <o:p></o:p></span></p>
+longer making the roots. So, what are the changes it has to do developmentally?
+</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -145,5 +149,10 @@ has changed its program for making long internode to the short internode. It
 has major changes in their program of the leaf development. Now, the leaf is
 different and more when it was underground it was having active developmental
 program for adventitious root development. But once it is coming above ground, it
-<span class=GramE>has to</span> shut down the program of adventitious root
-development.<o:p></o:p></span></p>
+has to shut down the program of adventitious root development.</span></p>
+
+</div>
+
+</body>
+
+</html>
