edit-add-finals

--- a/BIOTECHNOLOGY/lec3 PLANT DEVELOPMENTAL BIOLOGY CORRECTED.htm
+++ b/BIOTECHNOLOGY/lec3 PLANT DEVELOPMENTAL BIOLOGY CORRECTED.htm
@@ -1,44 +1,3 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:Tahoma;
-	panose-1:2 11 6 4 3 5 4 4 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:8.0pt;
-	margin-left:0in;
-	line-height:107%;
-	font-size:11.0pt;
-	font-family:"Calibri",sans-serif;}
-.MsoChpDefault
-	{font-family:"Calibri",sans-serif;}
-@page WordSection1
-	{size:595.35pt 841.95pt;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
-
-</head>
-
-<body lang=EN-US>
-
-<div class=WordSection1>
 
 <p class=MsoNormal align=center style='margin-bottom:0in;text-align:center;
 line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roman",serif'>Plant
@@ -72,8 +31,8 @@ line-height:normal'><b><span style='font-size:12.0pt;font-family:"Times New Roma
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>Welcome
 to the second lecture of Characteristic of Plant Growth and Development. So, if
 we recall in the first lecture, we had discussed the primary growth and
-development, secondary growth and development and lastly the  lateral growth
-and development. We had also discussed about the axis where  the growth and
+development, secondary growth and development and lastly the ï¿½lateral growth
+and development. We had also discussed about the axis where ï¿½the growth and
 development occurs, the points or the region of the plants where the
 meristematic activities are positioned and how they are maintained and
 coordinated during the process of plant growth and development. </span></p>
@@ -85,9 +44,11 @@ Slide Time: 01:05)</span></p>
 
 <p class=MsoNormal align=center style='margin-top:12.0pt;margin-right:0in;
 margin-bottom:12.0pt;margin-left:0in;text-align:center;line-height:150%'><span
-style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><img
-width=384 height=288
-src="lec3%20PLANT%20DEVELOPMENTAL%20BIOLOGY%20CORRECTED_files/image001.jpg"></span></p>
+style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><div class="se-component se-image-container __se__float-center" contenteditable="false">
+  <figure style="margin: auto;">
+      <img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/BIOTECHNOLOGY/lec3%20PLANT%20DEVELOPMENTAL%20BIOLOGY%20CORRECTED_files/image001.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12">
+                </figure>
+</div></span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
@@ -111,7 +72,7 @@ developmental plasticity is adopted or it is acquired by the plants. </span></p>
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>If
-you take this example, this is couch grass. Basically, it’s shoot grows below
+you take this example, this is couch grass. Basically, itï¿½s shoot grows below
 the ground as well as above the ground. And, what happens when the shoots are growing
 underground. Underground means it has a very different environmental condition
 than the above ground. In underground, the light intensity is less. Oxygen
@@ -128,9 +89,9 @@ development. </span></p>
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
 12.0pt;margin-left:0in;text-align:justify;line-height:150%'><span
 style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'>So,
-there is a developmental growth which is already going on here.  But once this
+there is a developmental growth which is already going on here. ï¿½But once this
 growing shoot reaches the ground and once it is coming outside the ground, it
-switches its developmental program. There is a change.  The first thing that happens
+switches its developmental program. There is a change. ï¿½The first thing that happens
 is now it would start making short internode.</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0in;margin-bottom:
@@ -150,9 +111,3 @@ has major changes in their program of the leaf development. Now, the leaf is
 different and more when it was underground it was having active developmental
 program for adventitious root development. But once it is coming above ground, it
 has to shut down the program of adventitious root development.</span></p>
-
-</div>
-
-</body>
-
-</html>
